--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "material-ui": "^0.20.2",
+    "jss": "^10.5.0",
+    "jss-rtl": "^0.3.0",
     "next": "9.5.3",
     "next-pwa": "^3.1.5",
     "react": "16.13.1",
